--- a/index.html
+++ b/index.html
@@ -1,42 +1,33 @@
 <!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Django maskurl by RedXBeard</title>
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  <title>Django maskurl</title>
-  <meta name="description" content="Masking url&#39;s on templates not to show exact path, hiding them all or part of all for tracing.">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
-</head>
-
-<body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Django maskurl</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">Masking url&#39;s on templates not to show exact path, hiding them all or part of all for tracing.</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/RedXBeard/django_maskurl/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/RedXBeard/django_maskurl/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/RedXBeard/django_maskurl" class="code">View Django maskurl on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h1>
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Django maskurl</h1>
+        <p>Masking url&#39;s on templates not to show exact path, hiding them all or part of all for tracing.</p>
+        <p class="view"><a href="https://github.com/RedXBeard/django_maskurl">View the Project on GitHub <small>RedXBeard/django_maskurl</small></a></p>
+        <ul>
+          <li><a href="https://github.com/RedXBeard/django_maskurl/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/RedXBeard/django_maskurl/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/RedXBeard/django_maskurl">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h1>
 <a name="django_maskurl" class="anchor" href="#django_maskurl"><span class="octicon octicon-link"></span></a>django_maskurl</h1>
 
 <p><a href="https://travis-ci.org/RedXBeard/django_maskurl"><img src="https://travis-ci.org/RedXBeard/django_maskurl.svg?branch=master" alt="Build Status"></a></p>
@@ -95,26 +86,13 @@
 </code></pre>
 
 <p>get params can also be added after the closing curly bracket.</p>
-        </article>
-      </div>
+      </section>
     </div>
     <footer>
-      <div class="owner">
-      <p><a href="https://github.com/RedXBeard" class="avatar"><img src="https://avatars3.githubusercontent.com/u/7275194?v=2&amp;s=60" width="48" height="48"></a> <a href="https://github.com/RedXBeard">RedXBeard</a> maintains <a href="https://github.com/RedXBeard/django_maskurl">Django maskurl</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
+      <p>Project maintained by <a href="https://github.com/RedXBeard">RedXBeard</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/RedXBeard/django_maskurl/tarball/master" class="tar">tar</a><a href="https://github.com/RedXBeard/django_maskurl/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
+  </body>
 </html>
